--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "forkify",
+  "name": "menu-app",
   "version": "1.0.0",
   "description": "Recipe application",
   "default": "index.html",
